# codon

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  CNAME  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  book.json  index.html  mkdocs.yml  sitemap.xml
.github/build-linux/: Dockerfile.linux-aarch64  Dockerfile.linux-x86_64  Dockerfile.manylinux2014-aarch64  Dockerfile.manylinux2014-x86_64  entrypoint.sh  test.sh
.github/workflows/: ci.yml
assets/javascripts/: bundle.5c86578b.min.js
assets/stylesheets/: main.1caf78d2.min.css  main.22cc1d52.min.css
bench/: README.md  bench.sh  run.sh
bench/binary_trees/: binary_trees.cpp
bench/chaos/: chaos.codon  chaos.py
bench/codon/: binary_trees.codon  binary_trees.py  chaos.codon  chaos.py  float.py  go.py  mandelbrot.codon  mandelbrot.py  nbody.cpp  npbench.codon  npbench_lib.codon  primes.py  set_partition.cpp  set_partition.py  spectral_norm.py  word_count.py
bench/fannkuch/: fannkuch.codon  fannkuch.py
bench/go/: go.codon
bench/nbody/: nbody.cpp  nbody.py
bench/primes/: primes.codon
bench/set_partition/: set_partition.cpp  set_partition.py
bench/sum/: sum.py
bench/taq/: taq.cpp  taq.py
bench/word_count/: word_count.cpp  word_count.py
cmake/: CMakeRC.cmake  backtrace-config.h.in  config.h.in  config.py.in  deps.cmake  xeus.patch
codon/app/: main.cpp
codon/cir/: attribute.cpp  attribute.h  attribute.hpp  base.cpp  base.h  base.hpp  cir.h  cir.hpp  const.cpp  const.h  const.hpp  flow.cpp  flow.h  flow.hpp  func.cpp  func.h  func.hpp  instr.cpp  instr.h  instr.hpp  module.cpp  module.h  module.hpp  pyextension.h  pyextension.hpp  value.cpp  value.h  value.hpp  var.cpp  var.h  var.hpp
codon/compiler/: compiler.cpp  compiler.h  compiler.hpp  debug_listener.cpp  debug_listener.h  debug_listener.hpp  engine.cpp  engine.h  engine.hpp  error.cpp  error.h  error.hpp  jit.cpp  jit.h  jit.hpp  jit_extern.h  memory_manager.cpp  memory_manager.h  memory_manager.hpp
codon/dsl/: dsl.h  dsl.hpp  plugins.cpp  plugins.h  plugins.hpp
codon/jit/: engine.cpp  engine.h  jit.cpp  jit.h
codon/parser/: ast.h  ast.hpp  cache.cpp  cache.h  cache.hpp  common.cpp  common.h  common.hpp  ctx.h  ctx.hpp  match.cpp  match.h  parser.cpp  parser.h
codon/runtime/: exc.cpp  gpu.cpp  lib.cpp  lib.h  re.cpp
codon/sir/: attribute.cpp  attribute.h  base.cpp  base.h  const.cpp  const.h  flow.cpp  flow.h  func.cpp  func.h  instr.cpp  instr.h  module.cpp  module.h  sir.h  value.cpp  value.h  var.cpp  var.h
codon/util/: common.cpp  common.h  common.hpp  jupyter.cpp  jupyter.h  peg2cpp.cpp  serialize.h  tser.h
compiler/dsl/: dsl.h  plugins.cpp  plugins.h
compiler/parser/: ast.h  cache.cpp  cache.h  common.cpp  common.h  ctx.h  parser.cpp  parser.h
compiler/seq/: pipeline.cpp  pipeline.h  revcomp.cpp  revcomp.h  seq.cpp  seq.h
compiler/sir/: attribute.cpp  attribute.h  base.cpp  base.h  const.cpp  const.h  flow.cpp  flow.h  func.cpp  func.h  instr.cpp  instr.h  module.cpp  module.h  sir.h  value.cpp  value.h  var.cpp  var.h
compiler/util/: common.cpp  common.h  peg2cpp.cpp  peglib.h
developers/compilation/: index.html
developers/contribute/: index.html
developers/extend/: index.html
developers/ir/: index.html
developers/roadmap/: index.html
docs/: README.md  SUMMARY.md  build.md  docgen.py  embed.md  index.md  intro.md  make.bat  parallel.md  pipelines.md  primer.md  python.md
docs/advanced/: build.md  gpu.md  ir.md  parallel.md  pipelines.md
docs/css/: extra.css
docs/developers/: build.md  compilation.md  contribute.md  extend.md  ir.md  roadmap.md
docs/doxygen/: Doxyfile
docs/integrations/: jupyter.md
docs/interop/: cpp.md  decorator.md  jupyter.md  numpy.md  pyext.md  python.md
docs/intro/: differences.md  faq.md  intro.md  releases.md  roadmap.md  tutorial.md
docs/labs/: index.md
docs/language/: basics.md  classes.md  collections.md  extra.md  ffi.md  functions.md  generators.md  generics.md  llvm.md  lowlevel.md  meta.md  overview.md  statics.md
docs/libraries/: numpy.md  stdlib.md
docs/overrides/: main.html
docs/parallel/: gpu.md  multithreading.md  simd.md
docs/sphinx/: Makefile  build.rst  codonlex.py  conf.py  cookbook.rst  docgen.py  embed.rst  index.rst  intro.rst  make.bat  parallel.rst  pipelines.rst  primer.rst  python.rst  seqlex.py
docs/start/: changelog.md  faq.md  install.md  usage.md
docs/workshop/: section1.seq  section2.seq  section3.codon  section4.codon  section5.seq  section6.codon
extra/cython/: README.md  __init__.py  decorator.py  jit.pxd  jit.pyx  setup.py  test.py
extra/jupyter/: CMakeLists.txt  jupyter.cpp  jupyter.h
extra/jupyter/share/jupyter/kernels/codon/: kernel.json.in
extra/jupyter/src/: codon.cpp  codon.h  main.cpp
extra/python/: .gitignore  MANIFEST.in  README.md  setup.py  (+1 more)
img/: image.avif
interop/: README.md  decorator.py  jit.pyx  setup.py  test.py
jit/: MANIFEST.in  README.md  pyproject.toml  setup.py
js/: mathjax.js
jupyter/: CMakeLists.txt  jupyter.cpp  jupyter.h  xeus.patch
jupyter/share/jupyter/kernels/codon/: kernel.json
labs/: index.html
runtime/: exc.cpp  lib.cpp  lib.h  main.cpp
scripts/: Dockerfile.codon-build  Dockerfile.codon-jupyter  Dockerfile.gpu  Dockerfile.llvm-build  backtrace-supported.h.cmake  deps.cmake  deps.sh  docgen.py  fix_loader_paths.sh  get_system_libs.sh  htslib-config.h.cmake  install.sh
search/: search_index.json
stdlib/: asyncio.codon  bisect.codon  bisect.seq  bz2.codon  cmath.codon  collections.codon  collections.seq  copy.codon  datetime.codon  functools.codon  getopt.codon  getopt.seq  gpu.codon  gzip.codon  gzip.seq  heapq.codon  itertools.codon  itertools.seq  math.codon  openmp.codon  openmp.seq  operator.codon  operator.seq  pickle.codon  pickle.seq  python.codon  python.seq  random.codon  re.codon  simd.codon  sortedlist.codon  sortedlist.seq  statistics.codon  statistics.seq  string.codon  string.seq  sys.codon  threading.codon  time.codon  typing.codon  (+1 more)
test/: CMakeLists.txt.in  main.cpp  types.cpp
(+1105 files in other folders)
